--- a/src/routes/Home/Home.styles.scss
+++ b/src/routes/Home/Home.styles.scss
@@ -1,101 +1,37 @@
 @import "../../styles/variables.scss";
 
 .hero {
-    position: relative;
-    color: $primary-color;
+    display: flex;
 
-    &__title {
-        font-size: 6.5rem;
-        font-family: "Times New Roman", Times, serif;
+    h1 {
+        font-size: 4rem;
+        line-height: 1.2;
+        font-weight: 400;
     }
 
-    &__sub-title {
-        font-size: 4.5rem;
-    }
-
-    img {
-        object-fit: cover;
-        border-radius: 0.75rem;
-    }
-
-    .upper {
+    .content {
+        width: 50%;
+        padding-left: 5rem;
+        padding-right: 2rem;
+        align-self: center;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        gap: 1rem;
 
-        .hero__title {
-            white-space: nowrap;
+        &__actions {
+            margin-top: 1.5rem;
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
         }
+    }
+    .banner {
+        width: 50%;
 
         img {
-            height: 16rem;
-            width: 13.5rem;
+            width: 100%;
+            object-fit: cover;
+            height: 40rem;
         }
-    }
-
-    .lower {
-        display: flex;
-        position: relative;
-
-        .hero__title {
-            position: relative;
-            align-self: flex-end;
-            padding-left: 2rem;
-        }
-
-        &__connector {
-            position: absolute;
-            font-size: 3rem;
-            top: -144%;
-            left: -2px;
-            border-radius: 0.5rem;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2)),
-                url(/src/assets/images/baked-sushi.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            color: #fff;
-            padding: 0 1rem;
-            text-transform: uppercase;
-            transform: rotate(-90deg);
-            z-index: 2;
-
-            &::before {
-                content: "";
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%) rotate(90deg);
-                z-index: -1;
-                width: 5.5rem;
-                height: 3rem;
-                border-radius: 0.5rem;
-                opacity: 0.35;
-                border: 2px solid $primary-color;
-            }
-        }
-
-        img {
-            margin-top: -8rem;
-            height: 15rem;
-            flex-grow: 1;
-        }
-    }
-
-    &__cta {
-        margin-top: 1.5rem;
-
-        .texts {
-            width: 50%;
-        }
-
-        h2 {
-            font-family: inherit;
-            font-weight: 500;
-            font-size: 1.45rem;
-        }
-
-        display: flex;
-        justify-content: space-between;
-        gap: 2rem;
     }
 }
