--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,8 +1,8 @@
 @import "mixins.scss";
 
 .section-px {
-    padding-left: 20rem;
-    padding-right: 20rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
 
     @include respond(phone) {
         padding-left: 2rem;
@@ -11,6 +11,9 @@
 }
 
 .section-py {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
     @include respond(phone) {
         padding-top: 2rem;
         padding-bottom: 2rem;
