--- a/src/routes/Home/Home.styles.scss
+++ b/src/routes/Home/Home.styles.scss
@@ -3,12 +3,6 @@
 .hero {
     display: flex;
 
-    h1 {
-        font-size: 4rem;
-        line-height: 1.2;
-        font-weight: 400;
-    }
-
     .content {
         width: 50%;
         padding-left: 5rem;
@@ -34,6 +28,10 @@
             height: 40rem;
             display: block;
         }
+    }
+
+    .section-paragraph {
+        max-width: 90%;
     }
 }
 
