--- a/src/components/Categories/Categories.styles.scss
+++ b/src/components/Categories/Categories.styles.scss
@@ -95,4 +95,11 @@
             }
         }
     }
+
+    .actions {
+        display: flex;
+        justify-content: center;
+        margin-top: 2rem;
+        gap: 2rem;
+    }
 }
