--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,6 +1,22 @@
 @import "./variables.scss";
 
 .section-paragraph {
-    font-size: 0.9rem;
-    font-weight: 300;
+    color: $primary-light;
+    line-height: 1.667em;
+
+    &--dark {
+        color: $light-gray-color;
+    }
+}
+
+.large-heading {
+    font-size: 4rem;
+    line-height: 1.2;
+    font-weight: 400;
+}
+
+.primary-heading {
+    font-size: 2.7rem;
+    line-height: 1.19em;
+    font-weight: 500;
 }
