--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -19,3 +19,10 @@
         padding-bottom: 2rem;
     }
 }
+
+.section-heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
