Set text aligment and max width

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -3,6 +3,8 @@
 .section-paragraph {
     color: $primary-light;
     line-height: 1.667em;
+    max-width: 50%;
+    text-align: center;
 
     &--dark {
         color: $light-gray-color;
