--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,9 @@ textarea {
 
 button {
     cursor: pointer;
+    font-family: inherit;
+    font-size: 1.1rem;
+    background: transparent;
 }
 
 img {
