Lighten variable color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #0d0d0d;
-$primary-color-hover: #000000;
-$primary-light: #5e5e5e;
+$primary-color-hover: rgb(35, 32, 32);
+$primary-light: #252424;
 
 $light-gray-color: #dadada;
