--- a/src/components/Product/Product.styles.scss
+++ b/src/components/Product/Product.styles.scss
@@ -29,6 +29,12 @@
             font-size: 1.15rem;
         }
 
+        .tags {
+            display: flex;
+            gap: 1rem;
+            color: $primary-light;
+        }
+
         .stats {
             display: flex;
             align-items: center;
@@ -85,11 +91,11 @@
         }
 
         .quantity {
+            margin-top: 1.5rem;
             border: 1px solid #aeaeae;
             display: flex;
             width: 12rem;
             border-radius: 0.5rem;
-            margin-top: 2rem;
             overflow: hidden;
 
             &__btn {
@@ -99,7 +105,7 @@
                 border: none;
                 width: fit-content;
                 padding: 0;
-                padding: 0 1rem;
+                padding: 0 0.75rem;
                 color: #6d6d6d;
                 transition: all 0.25s ease;
                 font-size: 1.4rem;
@@ -115,7 +121,7 @@
                 max-width: 100%;
                 text-align: center;
                 color: $primary-color;
-                padding: 0.8rem;
+                padding: 0.5rem 0.35rem;
                 font-weight: 500;
                 border-top: none;
                 border-bottom: none;
@@ -127,6 +133,28 @@
                 &::-webkit-inner-spin-button {
                     display: none;
                 }
+            }
+        }
+
+        .actions {
+            border-top: 1px solid #ccc;
+            padding-top: 1.5rem;
+            margin-top: 4rem;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+
+            .btn {
+                display: flex;
+                align-items: center;
+                gap: 0.6rem;
+
+                svg {
+                    font-size: 1.35rem;
+                }
+            }
+
+            .add-to-cart {
             }
         }
     }
