Add a reversed version of a style component

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -60,6 +60,14 @@
             transform: translateX(5px);
         }
     }
+
+    &--reversed {
+        &:hover {
+            svg {
+                transform: translateX(-5px);
+            }
+        }
+    }
 }
 
 .line {
