--- a/src/components/CartDropdown/CartDropdown.styles.scss
+++ b/src/components/CartDropdown/CartDropdown.styles.scss
@@ -2,7 +2,7 @@
 
 .cart-dropdown {
     position: absolute;
-    width: 20rem;
+    width: 22rem;
     height: 25rem;
     display: flex;
     flex-direction: column;
@@ -15,15 +15,17 @@
 
     .orders {
         min-height: 80%;
-        overflow: auto;
         margin-bottom: 10px;
         display: flex;
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 2rem;
         position: relative;
+        overflow: auto;
+        padding-bottom: 1rem;
 
         &::-webkit-scrollbar {
-            width: 5px;
+            width: 6px;
+            height: 10px;
         }
         &::-webkit-scrollbar-track {
             background: #aaa;
@@ -49,31 +51,53 @@
         .order {
             width: 100%;
             display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            padding: 1rem;
 
-            &__photo {
-                width: 5rem;
-                object-fit: cover;
-            }
-
-            &__details {
-                width: 100%;
+            &__left {
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
-                padding: 0.6rem 0.75rem;
-                font-size: 1.02rem;
-                text-align: left;
-                text-transform: capitalize;
-                font-weight: 500;
 
-                .name {
-                    white-space: nowrap;
-                    font-weight: 600;
+                .photo {
+                    width: 5rem;
+                    object-fit: cover;
                 }
 
-                .label {
-                    color: $primary-light;
-                    font-weight: 400;
+                .details {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    padding: 0.6rem 0.75rem;
+                    font-size: 1.02rem;
+                    text-align: left;
+                    text-transform: capitalize;
+                    font-weight: 500;
+
+                    .name {
+                        white-space: nowrap;
+                        font-weight: 600;
+                    }
+
+                    .label {
+                        color: $primary-light;
+                        font-weight: 400;
+                    }
+                }
+            }
+
+            &__right {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 0.5rem;
+
+                .add-on-item {
+                    border: 1px solid;
+                    padding: 0.25rem 0.5rem;
+                    display: flex;
+                    gap: 0.3rem;
+                    font-size: 0.8rem;
                 }
             }
         }
