--- a/src/components/Product/Product.styles.scss
+++ b/src/components/Product/Product.styles.scss
@@ -13,6 +13,10 @@
         }
     }
 
+    .highlight {
+        font-weight: 600;
+    }
+
     .details {
         width: 50%;
         display: flex;
@@ -33,6 +37,12 @@
             display: flex;
             gap: 1rem;
             color: $primary-light;
+            font-weight: 500;
+        }
+
+        .line {
+            margin-top: 1rem;
+            margin-bottom: 0.25rem;
         }
 
         .stats {
@@ -66,7 +76,7 @@
             }
         }
 
-        .price {
+        .total {
             margin-top: 0.5rem;
             font-size: 2.5rem;
             font-weight: 500;
@@ -80,18 +90,24 @@
 
             .group {
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
                 gap: 1rem;
                 font-size: 1.2rem;
 
                 input[type="radio"] {
+                    display: flex;
+                    margin-top: 0.5rem;
                     transform: scale(1.2);
                 }
+            }
+
+            .free {
+                font-weight: 500;
+                font-size: 0.95rem;
             }
         }
 
         .quantity {
-            margin-top: 1.5rem;
             border: 1px solid #aeaeae;
             display: flex;
             width: 12rem;
@@ -136,12 +152,45 @@
             }
         }
 
-        .actions {
-            border-top: 1px solid #ccc;
-            padding-top: 1.5rem;
-            margin-top: 4rem;
+        .add-ons {
+            margin-top: 1.5rem;
+
+            .list {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            h3 {
+                margin-bottom: 1rem;
+            }
+        }
+
+        .order-total {
+            margin-top: 7rem;
             display: flex;
             align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 0.5rem;
+            font-size: 1.25rem;
+
+            h3 {
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+
+            .value {
+                font-weight: 600;
+                letter-spacing: 1px;
+            }
+        }
+
+        .actions {
+            margin-top: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
             gap: 2rem;
 
             .btn {
@@ -152,9 +201,6 @@
                 svg {
                     font-size: 1.35rem;
                 }
-            }
-
-            .add-to-cart {
             }
         }
     }
