--- a/src/routes/Menu/Menu.styles.scss
+++ b/src/routes/Menu/Menu.styles.scss
@@ -14,6 +14,7 @@
         letter-spacing: 1px;
         margin-top: -1.5rem;
         display: flex;
+        width: fit-content;
     }
 
     .options {
